@@ -200,6 +200,7 @@ typedef union {
     u16 PRINT_AND_MODIFY_WITHOUT_GATES:1;
     u16 PRINT_TRANSPOSED_NOTES:1;
     u16 SELECT_UNMUTED_TRACK:1;
+    u16 ALL_RELATIVE:1;
     u16 SWAP_GP_LED_COLOURS:1;
     u16 SWAP_SELECT_LED_COLOURS:1;
     u16 GP_LED_DONT_XOR_POS:1;
